Linking it all together

--- a/flexbox-vs-grid/styles.css
+++ b/flexbox-vs-grid/styles.css
@@ -145,8 +145,9 @@ footer {
 }
 
 .exhibit img {
-  object-fit: contain;
+  border-radius: 50%;
   margin: 5px 0 60px;
+  object-fit: contain;
 }
 
 .exhibit-link {
