--- a/flexbox-vs-grid/styles.css
+++ b/flexbox-vs-grid/styles.css
@@ -79,6 +79,12 @@ a.icon {
   }
 }
 
+@media (min-width: 768px) {
+  header content {
+    margin: 0 40px;
+  }
+}
+
 @media (max-width: 768px) {
   .content {
     padding: 0 0 5px;
