Update navigation styles

--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,3 +1,5 @@
+$nav-breakpoint: 768px;
+
 .header-wrapper,
 .footer-wrapper {
     margin: auto;
@@ -118,8 +120,30 @@ header {
     line-height: 0;
 }
 
-@media screen and (max-width: 39.9375em) {
-    header {
+header {
+    display: none;
+
+    @media (min-width: $nav-breakpoint) {
+        display: block;
+    }
+}
+
+
+
+.mobile-header {
+    max-height: 100vh;
+    overflow-y: scroll;
+    background: rgb(119, 48, 21);
+    background: linear-gradient(180deg, rgba(119, 48, 21, 1) 0%, rgba(95, 9, 121, 1) 27%, rgba(23, 86, 110, 1) 99%);
+    color: #FFFFFF;
+    max-height: 100vh;
+    padding-bottom: 20px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
+
+    @media (min-width: $nav-breakpoint) {
         display: none;
     }
 
@@ -127,21 +151,7 @@ header {
         align-content: center;
     }
 
-    .mobile-header {
-        max-height: 100vh;
-        overflow-y: scroll;
-        background: rgb(119, 48, 21);
-        background: linear-gradient(180deg, rgba(119, 48, 21, 1) 0%, rgba(95, 9, 121, 1) 27%, rgba(23, 86, 110, 1) 99%);
-        color: #FFFFFF;
-        max-height: 100vh;
-        padding-bottom: 20px;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        z-index: 9999;
-    }
-
-    .mobile-header .mobile-header-flex {
+    .mobile-header-flex {
         display: flex;
         flex-flow: wrap;
         justify-content: space-around;
