--- a/public/css/main.css
+++ b/public/css/main.css
@@ -310,4 +310,16 @@ li.role-nav-item {
   padding: 0 6px 0 2px;
 }
 
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  white-space: nowrap !important;
+  border: 0 !important;
+}
+
 /*# sourceMappingURL=main.css.map*/
