--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -61,7 +61,7 @@ header {
     background-repeat: no-repeat;
     background-size: contain;
     font-size: 0;
-    margin-top: -15px;
+    top: 10px;
     height: 100%;
     position: absolute;
     transform: translateZ(0) scale(1, 1) !important;
@@ -109,9 +109,8 @@ header {
     background-size: contain;
     display: block;
     font-size: 0;
-    margin-top: 30px;
     padding-bottom: 20px;
-    height: 100%;
+    height: 30px;
     width: 150px;
 }
 
@@ -134,8 +133,6 @@ header {
     background: rgb(119, 48, 21);
     background: linear-gradient(180deg, rgba(119, 48, 21, 1) 0%, rgba(95, 9, 121, 1) 27%, rgba(23, 86, 110, 1) 99%);
     color: #FFFFFF;
-    max-height: 100vh;
-    padding-bottom: 20px;
     position: fixed;
     top: 0;
     width: 100%;
@@ -153,5 +150,7 @@ header {
         display: flex;
         flex-flow: wrap;
         justify-content: space-around;
+        align-items: center;
+        padding: 20px 0;
     }
 }
