--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -3,7 +3,7 @@
   }
   
   body {
-    background-color: white;
+    background-color: $color-white;
   }
   
   .container {
@@ -27,12 +27,12 @@
   }
   
   h1, h2, h3, h4, h5, h6, p {
-    color: #383838;
+    color: $font-color;
     font-family: 'Molengo', sans-serif;
   }
   
   a {
-    color: #1F596B;
+    color: $link-color;
     font-weight: 500;
     text-decoration: underline;
   }
