--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -5,8 +5,11 @@ footer {
     width: 100%;
     margin-top: auto;
     padding-top: 20px;
-  
     animation: pulse 30s infinite;
+
+    a {
+        color: $color-white;
+    }
 }
   
 @keyframes pulse {
