--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -21,7 +21,7 @@
 }
 
 .role-nav-item a {
-    color: #FFFFFF;
+    color: $color-white;
     font-size: 1.2em;
     font-weight: 500;
 }
@@ -29,7 +29,7 @@
 li.role-nav-item {
     display: inline-block;
     border-right: solid 2px;
-    color: #FFFFFF;
+    color: $color-white;
     font-size: 90%;
     font-weight: 900;
     padding: 0 6px 0 2px;
@@ -50,7 +50,7 @@ li.role-nav-item {
 
                     &::after {
                         content: '';
-                        background-color: #ffffff;
+                        background-color: $color-white;
                         position: absolute;
                         top: 2px;
                         right: 0;
@@ -67,7 +67,7 @@ li.role-nav-item {
                 }
 
                 a {
-                    color: #ffffff;
+                    color: $color-white;
                     text-decoration: none;
                 }
             }
