Remove normalise css

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -9,6 +9,12 @@ footer {
 
     a {
         color: $color-white;
+
+        &:hover,
+        &:focus {
+            color: $color-white;
+            text-decoration: none;
+        }
     }
 }
   
