--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,6 +36,7 @@ a {
   color: #1F596B;
   font-weight: 500;
   text-decoration: underline;
+  transition: all 0.3s ease;
 }
 
 h1 {
@@ -227,6 +228,10 @@ footer {
 }
 footer a {
   color: #FFFFFF;
+}
+footer a:hover, footer a:focus {
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
 @keyframes pulse {
