--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -23,14 +23,38 @@ header {
     z-index: 9999;
     position: fixed;
     top: 0;
-}
+    
+    &-items {
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        margin: auto;
+        width: 60%;
+    }
 
-.header-items {
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    width: 60%;
+    .role-nav {
+        a {
+            text-decoration: none;
+            position: relative;
+
+            &::after {
+                content: '';
+                background-color: $color-white;
+                position: absolute;
+                left: 0;
+                bottom: -2px;
+                height: 1px;
+                width: 100%;
+            }
+        
+            &:hover,
+            &:focus {
+                &::after {
+                    width: 0;
+                }
+            }
+        }
+    }
 }
 
 .brand {
