Updates to link animation and cards

--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -45,6 +45,7 @@ header {
                 bottom: -2px;
                 height: 1px;
                 width: 100%;
+                transition: all 0.3s ease;
             }
         
             &:hover,
