--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,6 +1,4 @@
 footer {
-    /*background: rgb(36,12,61);
-    background: linear-gradient(180deg, rgba(36,12,61,1) 0%, rgba(63,13,77,1) 57%, rgba(9,44,57,1) 99%);*/
     height: 75px;
     width: 100%;
     margin-top: auto;
@@ -9,6 +7,26 @@ footer {
 
     a {
         color: $color-white;
+        text-decoration: none;
+        position: relative;
+
+        &::after {
+            content: '';
+            background-color: $color-white;
+            position: absolute;
+            left: 0;
+            bottom: -2px;
+            height: 1px;
+            width: 100%;
+            transition: all 0.3s ease;
+        }
+    
+        &:hover,
+        &:focus {
+            &::after {
+                width: 0;
+            }
+        }
     }
 }
   
