Updates footer link colour

--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -23,6 +23,8 @@ footer {
     
         &:hover,
         &:focus {
+            color: $color-white;
+            
             &::after {
                 width: 0;
             }
