--- a/public/css/main.css
+++ b/public/css/main.css
@@ -254,6 +254,9 @@ footer a::after {
   width: 100%;
   transition: all 0.3s ease;
 }
+footer a:hover, footer a:focus {
+  color: #FFFFFF;
+}
 footer a:hover::after, footer a:focus::after {
   width: 0;
 }
